--- a/index.html
+++ b/index.html
@@ -2,49 +2,50 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Telegram Links</title>
+  <title>Join My Telegram Channels</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
       text-align: center;
-      padding: 40px;
+      padding: 30px;
+      background-color: #f4f4f4;
     }
     h1 {
-      color: #0088cc;
+      color: #333;
     }
-    .link-button {
+    .button {
       display: block;
+      width: 90%;
+      max-width: 300px;
       margin: 10px auto;
-      padding: 12px 20px;
-      width: 80%;
-      max-width: 400px;
+      padding: 15px;
       background-color: #0088cc;
       color: white;
       text-decoration: none;
       border-radius: 8px;
       font-size: 16px;
-      transition: background 0.3s ease;
+      transition: background-color 0.3s;
     }
-    .link-button:hover {
-      background-color: #005f88;
+    .button:hover {
+      background-color: #005f8f;
     }
   </style>
 </head>
 <body>
-  <h1>Join My Telegram Bots</h1>
+  <h1>Join All Our Telegram Channels</h1>
 
-  <a class="link-button" href="https://t.me/mybot?start=link1" target="_blank">Join Bot 1</a>
-  <a class="link-button" href="https://t.me/mybot?start=link2" target="_blank">Join Bot 2</a>
-  <a class="link-button" href="https://t.me/mybot?start=link3" target="_blank">Join Bot 3</a>
-  <a class="link-button" href="https://t.me/mybot?start=link4" target="_blank">Join Bot 4</a>
-  <a class="link-button" href="https://t.me/mybot?start=link5" target="_blank">Join Bot 5</a>
-  <a class="link-button" href="https://t.me/mybot?start=link6" target="_blank">Join Bot 6</a>
-  <a class="link-button" href="https://t.me/mybot?start=link7" target="_blank">Join Bot 7</a>
-  <a class="link-button" href="https://t.me/mybot?start=link8" target="_blank">Join Bot 8</a>
-  <a class="link-button" href="https://t.me/mybot?start=link9" target="_blank">Join Bot 9</a>
-  <a class="link-button" href="https://t.me/mybot?start=link10" target="_blank">Join Bot 10</a>
+  <a class="button" href="https://t.me/+JnzAmD43PoYwNGY9" target="_blank">Channel 1</a>
+  <a class="button" href="https://t.me/+7IernczZnGRhZTJl" target="_blank">Channel 2</a>
+  <a class="button" href="https://t.me/+CkUNwErxOJVjODY1" target="_blank">Channel 3</a>
+  <a class="button" href="https://t.me/+JnzAmD43PoYwNGY9" target="_blank">Channel 4</a>
+  <a class="button" href="https://t.me/+jIkPeFpMEwA5YTI1" target="_blank">Channel 5</a>
+  <a class="button" href="https://t.me/+JC1YH880OSZmMzNl" target="_blank">Channel 6</a>
+  <a class="button" href="https://t.me/+NAJ7ZpYXOGQxZDM1" target="_blank">Channel 7</a>
+  <a class="button" href="https://t.me/+hkFLkn2DM-cyMGQ1" target="_blank">Channel 8</a>
+  <a class="button" href="https://t.me/+CS0F5QH4wtpkYjQ1" target="_blank">Channel 9</a>
+  <a class="button" href="https://t.me/+zgrJz-mRsvxiYjVl" target="_blank">Channel 10</a>
+  <a class="button" href="https://t.me/+WWHqDkae3-ExZWI1" target="_blank">Channel 11</a>
+  <a class="button" href="https://t.me/+WWHqDkae3-ExZWI1" target="_blank">Channel 12</a>
+  <a class="button" href="https://t.me/+dYC_cY3TE0FlNDM1" target="_blank">Channel 13</a>
+  <a class="button" href="https://t.me/+TcFxRz1UZRdiY2E1" target="_blank">Channel 14</a>
 
-  <p style="margin-top: 40px; color: gray;">Made with ❤️ for Telegram users</p>
-</body>
-</html>
